# DSVClient

./: .gitignore  LICENSE  README.md  cli.py  client.py  config.py  pom.xml  pyproject.toml
.github/workflows/: maven.yml  tests.yml
scripts/: install.sh  uninstall.sh
src/main/java/edu/yu/capstone/dsv/client/: Client.java  ClientCli.java  ClientException.java  ClientProperties.java
src/main/java/edu/yu/capstone/dsv/client/dto/: CreateSecretRequest.java  DeleteSecretRequest.java  GetSecretRequest.java  UpdateSecretRequest.java
src/test/java/edu/yu/capstone/dsv/client/: ClientTest.java
tests/: test_cli.py  test_install_smoke.py
