[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dsvclient"
version = "0.1.0"
description = "Distributed Secrets Vault command-line client"
requires-python = ">=3.10"

[project.scripts]
dsvc = "cli:main"

[tool.setuptools]
py-modules = ["cli", "client", "config"]
